cmake_minimum_required(VERSION 2.6)
project(pbre)
if(MSVC)
    set(EXTRA_CXX_FLAGS)
    set(EXTRA_C_FLAGS /WX /W3 /MP)
else()
    set(EXTRA_CXX_FLAGS -std=c++11)
    set(EXTRA_C_FLAGS -Wall -Werror)
endif()
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${EXTRA_C_FLAGS} ${EXTRA_CXX_FLAGS})
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} ${EXTRA_C_FLAGS})

add_subdirectory(Modules)
add_subdirectory(Imported)